message controller
