# controllers/messageController.js
@@ -1,26 +1,31 @@
-// import MessageModel from "../models/messageModel.js";
+const MessageModel = require("../models/MessageModel");
 
-// export const addMessage = async (req, res) => {
-//   const { chatId, senderId, text } = req.body;
-//   const message = new MessageModel({
-//     chatId,
-//     senderId,
-//     text,
-//   });
-//   try {
-//     const result = await message.save();
-//     res.status(200).json(result);
-//   } catch (error) {
-//     res.status(500).json(error);
-//   }
-// };
+const addMessage = async (req, res) => {
+  const { chatId, senderId, text } = req.body;
+  const message = new MessageModel({
+    chatId,
+    senderId,
+    text,
+  });
+  try {
+    const result = await message.save();
+    res.status(200).json(result);
+  } catch (error) {
+    res.status(500).json(error);
+  }
+};
 
-// export const getMessages = async (req, res) => {
-//   const { chatId } = req.params;
-//   try {
-//     const result = await MessageModel.find({ chatId });
-//     res.status(200).json(result);
-//   } catch (error) {
-//     res.status(500).json(error);
-//   }
-// };
+const getMessages = async (req, res) => {
+  const { chatId } = req.params;
+  try {
+    const result = await MessageModel.find({ chatId });
+    res.status(200).json(result);
+  } catch (error) {
+    res.status(500).json(error);
+  }
+};
+
+module.exports = {
+  addMessage,
+  getMessages,
+};
