# models/MessageModel.js
@@ -1,21 +1,20 @@
-// import mongoose from "mongoose";
+const mongoose = require("mongoose");
 
-// const MessageSchema = new mongoose.Schema(
-//   {
-//     chatId: {
-//       type: String,
-//     },
-//     senderId: {
-//       type: String,
-//     },
-//     text: {
-//       type: String,
-//     },
-//   },
-//   {
-//     timestamps: true,
-//   }
-// );
+const MessageSchema = new mongoose.Schema(
+  {
+    chatId: {
+      type: String,
+    },
+    senderId: {
+      type: String,
+    },
+    text: {
+      type: String,
+    },
+  },
+  {
+    timestamps: true,
+  }
+);
 
-// const MessageModel = mongoose.model("Message", MessageSchema);
-// export default MessageModel;
+module.exports = mongoose.model("Message", MessageSchema);
